--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 venv/
 .venv/
 
-# Ігнорування папки з даними (якщо вона велика)
+# Ігнорування папки з даними 
 data/
 
 # Додаткові типові виключення для Python
